--- a/server-inator/.env
+++ b/server-inator/.env
@@ -2,5 +2,6 @@ AUTH_EMAIL=testhost1080@hotmail.com
 AUTH_PASS=testerpro1011
 MONGODB_URL=mongodb+srv://testhost1080:testerpro1011@cluster0.qsk9hsm.mongodb.net/?retryWrites=true&w=majority
 LOCAL_MONGO_URL=mongodb://127.0.0.1:27017/dataCollection
+KEY=AIzaSyBYljGPPIoHjou7TJIyKKVF2YiBrujpGwI
 
 
